fix(instance): align stop icon

--- a/src/app/home/instances/instance/_instance.scss
+++ b/src/app/home/instances/instance/_instance.scss
@@ -36,7 +36,7 @@
         .icon {
             display: block;
 
-            margin-top: 18px;
+            margin-top: 24px;
             font-size: 40px;
 
             color: #fff;
